# git-docker-pytest

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: run-boptest.yml  run-docker-compose.yml  run-tests.yml
.github/workflows /: dummy-action.yml
examples/: boptest_local_server_fixture.py  clone_repo.py  clone_repo_boptest.py  multi_env.py
examples/docker-compose-example/: docker-compose.yml
tests/: boptest_local_server_fixture.py  test_boptest_integration.py
